fix the bugs of some controller and repos

--- a/Views/AdminMaster/AdminList.cshtml
+++ b/Views/AdminMaster/AdminList.cshtml
@@ -13,6 +13,8 @@
 <div class="card shadow mb-4">
     <div class="card-header py-3 text-center ">
         <h2 class="m-0 font-weight-bold text-primary">Admin List</h2>
+        <a class="btn btn-warning Edit-btn" href="@Url.Action("AddAdmin", "AdminMaster")"> Add new Admin
+        </a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
