--- a/Views/MemberMaster/Details.cshtml
+++ b/Views/MemberMaster/Details.cshtml
@@ -1,5 +1,8 @@
 ﻿@model library_management.Models.Member
-
+@{
+    Layout = "/Views/Shared/_mainLayout.cshtml";
+    ViewData["Title"] = "member details";
+}
 <div class="container mt-4">
     <div class="card shadow">
         <div class="card-header text-center bg-primary text-white">
