--- a/Views/Dashboard/MyProfile.cshtml
+++ b/Views/Dashboard/MyProfile.cshtml
@@ -68,7 +68,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <label>state</label>
+                            <label>city</label>
                             <select class="form-control" asp-for="City" id="City">
                                 <option value="" disabled selected>Select City</option>
                             </select>
